# RC-Marketplace

./: CMakeLists.txt  README.md  acquisto.c  acquisto.h  client.c  clientN.c  db.txt  iofile.c  iofile.h  libclient.c  lista.c  lista.h  login.c  login.h  pct_c.c  pct_c.h  pct_l.h  pct_n.c  pct_n.h  pct_q.h  pct_r.h  serverC.c  serverM.c  serverN.c  wrapper.c  wrapper.h
include/: iofile.h  lista.h  pct_c.h  pct_l.h  pct_n.h  pct_q.h  wrapper.h
lib/: iofile.c  lista.c  wrapper.c
liste/: iofile.c  iofile.h  lista.c  lista.h
src/client/: acquisto.c  acquisto.h  client.c  client.h  libclient.c  main.c
src/clientN/: clientN.c  clientN.h  login.c  login.h  main.c
src/serverC/: main.c  serverC.c  serverC.h
src/serverM/: main.c  serverM.c  serverM.h  threadC.c  threadC.h  threadN.c  threadN.h
src/serverN/: main.c  serverN.c  serverN.h
